--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                 <div class="row">
                     <div class="col-md-6">
                         <p class="promo-title">DEVLOPER DIGITAL AGENCY</p>
-                        <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</P>
+                        <P>Creativity, enthusiasm, and a straightforward vision, co-founders Vikram Rathod and Rohit Kumar started DEVLOPER DIGITAL AGENCY,in the year 2018.
+                        Their vision is to accelerate business growth in the ever-expanding digital world with innovative and insight-driven digital solutions.
+                        </P>
                         <a href="#"><img src="assets/play.png" class="play-btn">Watch Tutorials</a>
                     </div>
                     <div class="col-md-6 text-center">
@@ -73,19 +75,19 @@
                     <div class="col-md-4 services">
                         <img src="assets/service1.png" class="services-img">
                         <h4>Growth Markating</h4>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <p>Our top priority is Quality, providing the client with an efficient and innovative digital marketing strategy that generates leads and culminates into conversions, that is the name of the game for us and by which we abide by.</p>
                     </div>
 
                     <div class="col-md-4 services">
                         <img src="assets/service2.png" class="services-img">
                         <h4>Online Branding</h4>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <p>Online branding, also referred to as Internet branding; is a brand management technique that uses the web to position a brand in the marketplace, it can be recognized as an attempt to bring customers to the brand, product, and practice.</p>
                     </div>
 
                     <div class="col-md-4 services">
                         <img src="assets/service3.png" class="services-img">
                         <h4>Animated Ads</h4>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <p>Animation has become one of the biggest advertising trends. Many companies may wonder why animated commercials are so effective? The first and foremost reason is that animated promotional videos are entertaining at the same time./p>
                     </div>
 
                 </div>
@@ -103,13 +105,11 @@
                         <p class="about-title">WHY WE'RE DIFFRENT</p>
                         <ul>
                             <li>Belive in doing business with honesty</li>
-                            <li>Belive in doing business with honesty</li>
-                            <li>Belive in doing business with honesty</li>
-                            <li>Belive in doing business with honesty</li>
-                            <li>Belive in doing business with honesty</li>
-                            <li>Belive in doing business with honesty</li>
-                            <li>Belive in doing business with honesty</li>
-                            <li>Belive in doing business with honesty</li>
+                            <li>Online advertising</li>
+                            <li>Online Content and Blogging</li>
+                            <li>Social Media Management and Listening</li>
+                            <li>Email and Online Newsletter Marketing</li>
+                            <li>Mobile Marketing</li>
                         </ul>
                     </div>
                     <div class="col-md-6">
@@ -126,13 +126,13 @@
                 <h1 class="title text-center">WHAT CLIENTS SAY</h1>
                 <div class="row offset-1">
                     <div class="col-md-5 testimonials">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>They did a great job in revamping our website. Following it, the digital marketing efforts that have been put up are very good. They have a strong concept and content driven marketing team.”</p>
                         <img src="assets/user1.jpg" >
                         <p class="user-details"><b>Agelina</b><br> Co-Founder at XYZ</p>
                     </div>
 
                     <div class="col-md-5 testimonials">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>We have been associated with Devloper digital Agency from quite some time now. With new inputs coming in for every campaign, their energy keeps the campaign alive throughtout.”</p>
                         <img src="assets/user2.jpg" >
                         <p class="user-details"><b>Sam Curren</b><br> Director at XYZ</p>
                     </div>
@@ -165,7 +165,8 @@
                 <div class="row">
                     <div class="col-md-4 footer-box">
                         <img src="assets/demo-logo.png">
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Creativity, enthusiasm, and a straightforward vision, co-founders Vikram Rathod and Rohit Kumar started DEVLOPER DIGITAL AGENCY,in the year 2018.
+                            Their vision is to accelerate business growth in the ever-expanding digital world with innovative and insight-driven digital solutions.</p>
                     </div>
 
                     <div class="col-md-4 footer-box">
